--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <div class="profile-container">
-            <img src="https://via.placeholder.com/150" alt="Logeswaran Kareshaan" class="profile-img">
+            <img src="images\karesh.jpg" alt="Logeswaran Kareshaan" class="profile-img">
             <h1>Logeswaran Kareshaan</h1>
             <p class="title">IT Professional & Developer</p>
         </div>
