--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
                     <h3>Recommending Rice Breed Based on Soil Nutrient</h3>
                     <p class="tech-used">Python, Machine Learning</p>
                     <p>Research project implementing ML to recommend optimal rice breeds based on soil conditions and nutrients.</p>
-                    <a href="#" class="https://kareshaan2k.github.io/final-research/">View Details</a>
+                    <a href="https://kareshaan2k.github.io/final-research/" class="project-link">View Details</a>
                 </div>
                 
                 <div class="project-card">
