--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                     <div class="timeline-date">2019</div>
                     <br>
                     <div class="timeline-content">
-                        <h3>G.C.E. Advanced Level</h3>
+                        <h3>G.C.E. Advanced Level - Trinity College Kandy</h3>
                         <p>Index Number: 6459170</p>
                         <table class="grades">
                             <tr>
@@ -153,7 +153,7 @@
                     <div class="timeline-date">2016 & 2018</div>
                     <br>
                     <div class="timeline-content">
-                        <h3>G.C.E. Ordinary Level</h3>
+                        <h3>G.C.E. Ordinary Level - Trinity College Kandy</h3>
                         <p>Index Numbers: 62304674, 84457295</p>
                         <div class="grades-grid">
                             <table class="grades-table">
@@ -413,8 +413,8 @@
                     <p><i class="fas fa-envelope"></i> Email: kareshandgraphics@gmail.com</p>
                     <p><i class="fas fa-map-marker-alt"></i> Address: Kandy, Sri Lanka</p>
                     <p><i class="fas fa-calendar-alt"></i> Date of Birth: 30 July, 2000</p>
-                    <p><i class="fas fa-id-card"></i> National ID: [Your ID]</p>
-                    <p><i class="fas fa-car"></i> Driving License: [Your License]</p>
+                    <p><i class="fas fa-id-card"></i> National ID: 200021200467 </p>
+                    <p><i class="fas fa-car"></i> Driving License: B4546760  </p>
                     
                     <div class="contact-form">
                         <h3>Send a Message</h3>
@@ -458,6 +458,7 @@
                     <div class="reference-card">
                         <h4>Abdur Rahman Faris</h4>
                         <p>Team Lead, HCL Tech</p>
+                        <p>00200 Glennie St, Colombo 00200</p>
                         <p><i class="fas fa-phone"></i> 0754131785</p>
                     </div>
                 </div>
