--- a/index.html
+++ b/index.html
@@ -409,14 +409,14 @@
             <div class="contact-container">
                 <div class="contact-info">
                     <h3>Personal Details</h3>
-                    <p><i class="fas fa-phone"></i> Phone: 0771380242</p>
-                    <p><i class="fas fa-envelope"></i> Email: kareshandgraphics@gmail.com</p>
+                    <p><i class="fas fa-phone"></i> Phone: 0771380242 / 0703901465</p>
+                    <p><i class="fas fa-envelope"></i> Email: karesh20229948@gmail.com</p>
                     <p><i class="fas fa-map-marker-alt"></i> Address: Kandy, Sri Lanka</p>
                     <p><i class="fas fa-calendar-alt"></i> Date of Birth: 30 July, 2000</p>
                     <p><i class="fas fa-id-card"></i> National ID: 200021200467 </p>
                     <p><i class="fas fa-car"></i> Driving License: B4546760  </p>
                     
-                    <div class="contact-form">
+                    <!--<div class="contact-form">
                         <h3>Send a Message</h3>
                         <form id="messageForm">
                             <div class="form-group">
@@ -430,7 +430,7 @@
                             </div>
                             <button type="submit">Send Message</button>
                         </form>
-                    </div>
+                    </div>-->
                 </div>
                 
                 <div class="references">
@@ -469,9 +469,9 @@
     <footer>
         <p>&copy; 2024 Logeswaran Kareshaan. All rights reserved.</p>
         <div class="footer-links">
-            <a href="#"><i class="fab fa-linkedin"></i></a>
-            <a href="#"><i class="fab fa-github"></i></a>
-            <a href="#"><i class="fab fa-twitter"></i></a>
+            <a href="www.linkedin.com/in/kareshaan-logeswaran-929165364"><i class="fab fa-linkedin"></i></a>
+            <a href="https://github.com/Kareshaan2k"><i class="fab fa-github"></i></a>
+            <a href="https://www.instagram.com/naturein_pixel/"><i class="fab fa-instagram"></i></a>
         </div>
     </footer>
 
