--- a/index.html
+++ b/index.html
@@ -469,7 +469,7 @@
     <footer>
         <p>&copy; 2024 Logeswaran Kareshaan. All rights reserved.</p>
         <div class="footer-links">
-            <a href="www.linkedin.com/in/kareshaan-logeswaran-929165364"><i class="fab fa-linkedin"></i></a>
+            <a href="https://www.linkedin.com/in/kareshaan-logeswaran-929165364/"><i class="fab fa-linkedin"></i></a>
             <a href="https://github.com/Kareshaan2k"><i class="fab fa-github"></i></a>
             <a href="https://www.instagram.com/naturein_pixel/"><i class="fab fa-instagram"></i></a>
         </div>
