--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
                 <div class="about-card">
                     <h3><i class="fas fa-certificate"></i> Certifications</h3>
                     <ul>
-                        <li>Reading MSc in Information Technology (SLIIT)</li>
+                        <!--<li>Reading MSc in Information Technology (SLIIT)</li>-->
                         <li>BSc Hons in Information Technology (SLIIT)</li>
-                        <li>Advanced Wildlife Management and Conservation (Open University)</li>
+                        <!--<li>Advanced Wildlife Management and Conservation (Open University)</li>-->
                         <li>Certificate in Basic First Aid</li>
                         <li>Graphic Designing & Animation (Wijeya Graphics)</li>
                     </ul>
@@ -156,7 +156,7 @@
                         <h3>G.C.E. Ordinary Level - Trinity College Kandy</h3>
                         <p>Index Numbers: 62304674, 84457295</p>
                         <div class="grades-grid">
-                            <table class="grades-table">
+                            <table class="grades">
                                 <tr>
                                     <th>Subject</th>
                                     <th>Grade</th>
